feat(casepro) criado container para celery

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ POSTGRES_PASSWORD=nyaruka
 POSTGRES_DB=casepro
 DJANGO_SUPERUSER_USERNAME=lucas_bahr@hotmail.com
 DJANGO_SUPERUSER_EMAIL=lucas_bahr@hotmail.com
+CELERY_BROKER_URL=redis://redis:6379
+DEBUG=True
