feat(casepro) adicionado estrutura terraform e kubernetes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,7 @@ version: '3'
 services:
   web:
     build: .
-    command: >
-      sh -c "python manage.py migrate &&
-             python manage.py runserver 0.0.0.0:8000"
+    command: sh -c "/usr/local/bin/script.sh && python manage.py runserver 0.0.0.0:8000"
     ports:
       - "8000:8000"
     depends_on:
