--- a/.env
+++ b/.env
@@ -5,4 +5,6 @@ DJANGO_SUPERUSER_USERNAME=lucas_bahr@hotmail.com
 DJANGO_SUPERUSER_EMAIL=lucas_bahr@hotmail.com
 CELERY_BROKER_URL=redis://redis:6379
 DEBUG=True
+SITE_API_HOST=http://0.0.0.0:8001/
+SITE_BACKEND=
 
